--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
           "type": "color",
           "description": "link_color_description",
           "label": "link_color_label",
-          "value": "#1F73B7"
+          "value": "#3dbdbf"
         },
         {
           "identifier": "hover_link_color",
@@ -129,11 +129,15 @@
               "value": "'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
             },
             {
+              "label": "Rajdhani",
+              "value": "'Rajdhani', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
+            },
+            {
               "label": "Trebuchet MS",
               "value": "'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"
             }
           ],
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
+          "value": "'Rajdhani', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
         },
         {
           "identifier": "text_font",
@@ -202,11 +206,15 @@
               "value": "'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
             },
             {
+              "label": "Rajdhani",
+              "value": "'Rajdhani', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
+            },
+            {
               "label": "Trebuchet MS",
               "value": "'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"
             }
           ],
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif"
+          "value": "'Rajdhani', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif"
         }
       ]
     },
@@ -250,6 +258,18 @@
           "label": "community_background_image_label"
         },
         {
+          "identifier": "mit_background",
+          "type": "file",
+          "description": "background_image_description",
+          "label": "Background image"
+        },
+        {
+          "identifier": "mit_footer_logo",
+          "type": "file",
+          "description": "mit_footer_logo_description",
+          "label": "Footer logo"
+        },
+        {
           "identifier": "community_image",
           "type": "file",
           "description": "community_image_description",
@@ -291,7 +311,7 @@
           "type": "checkbox",
           "description": "recent_activity_description",
           "label": "recent_activity_label",
-          "value": true
+          "value": false
         }
       ]
     },
@@ -389,6 +409,74 @@
           "description": "follow_topic_description",
           "label": "follow_topic_label",
           "value": true
+        }
+      ]
+    },
+    {
+      "label": "footer_section_contents",
+      "variables": [
+        {
+          "identifier": "show_contact_us_section",
+          "type": "checkbox",
+          "description": "show_contact_us_section_description",
+          "label": "show_contact_us_section_label",
+          "value": true
+        },
+        {
+          "identifier": "contact_us_header",
+          "type": "text",
+          "description": "contact_us_header_description",
+          "label": "contact_us_header_label",
+          "value": "Can't find what you're looking for?"
+        },
+        {
+          "identifier": "mit_address",
+          "type": "text",
+          "description": "mit_address_description",
+          "label": "mit_address_label",
+          "value": "Massachusetts Institute of Technology 77 Massachusetts Avenue Cambridge, MA 02139"
+        },
+        {
+          "identifier": "mit_phone_number",
+          "type": "text",
+          "description": "mit_phone_number_description",
+          "label": "mit_phone_number_label",
+          "value": "617-253-1000"
+        },
+        {
+          "identifier": "mit_home",
+          "type": "text",
+          "description": "mit_home_description",
+          "label": "mit_home_label",
+          "value": "https://www.mit.edu/"
+        },
+        {
+          "identifier": "mit_about_us",
+          "type": "text",
+          "description": "mit_about_us_description",
+          "label": "mit_about_us_label",
+          "value": "https://xpro.mit.edu/about-us/"
+        },
+        {
+          "identifier": "mit_tos",
+          "type": "text",
+          "description": "mit_tos_description",
+          "label": "mit_tos_label",
+          "value": "https://xpro.mit.edu/terms-of-service/"
+        },
+        {
+          "identifier": "mit_privacy_policy",
+          "type": "text",
+          "description": "mit_privacy_policy_description",
+          "label": "mit_privacy_policy_label",
+          "value": "https://xpro.mit.edu/privacy-policy/"
+        },
+        {
+          "identifier": "mit_honor_code",
+          "type": "text",
+          "description": "mit_honor_code_description",
+          "label": "mit_honor_code_label",
+          "value": "https://xpro.mit.edu/honor-code/"
         }
       ]
     },
