style: zenDesk theme updates: round 1

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
           "type": "color",
           "description": "link_color_description",
           "label": "link_color_label",
-          "value": "#3dbdbf"
+          "value": "#355b6b"
         },
         {
           "identifier": "hover_link_color",
@@ -56,6 +56,13 @@
           "description": "background_color_description",
           "label": "background_color_label",
           "value": "#FFFFFF"
+        },
+        {
+          "identifier": "site_theme_color",
+          "type": "color",
+          "description": "site_theme_base_color_description",
+          "label": "site_theme_base_color_label",
+          "value": "#A32034"
         }
       ]
     },
@@ -278,6 +285,18 @@
       ]
     },
     {
+      "label": "header_page_group_label",
+      "variables": [
+        {
+          "identifier": "show_user_info",
+          "type": "checkbox",
+          "description": "user_info_description",
+          "label": "user_info_label",
+          "value": false
+        }
+      ]
+    },
+    {
       "label": "search_group_label",
       "variables": [
         {
@@ -448,7 +467,7 @@
           "type": "text",
           "description": "mit_home_description",
           "label": "mit_home_label",
-          "value": "https://www.mit.edu/"
+          "value": "https://xpro.mit.edu/"
         },
         {
           "identifier": "mit_about_us",
